// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Render must match blue() 1`] = `
<div>
  <button
    class="btn btn-blue"
    type="button"
  >
    Blue button
  </button>
</div>
`;

exports[`<Button /> Render must match blueIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-blue"
    type="button"
  >
    <mock-file
      aria-hidden="true"
      classname="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
    Blue icon button
  </button>
</div>
`;

exports[`<Button /> Render must match blueIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-blue"
    type="button"
  >
    Blue icon button
    <mock-file
      aria-hidden="true"
      classname="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
  </button>
</div>
`;

exports[`<Button /> Render must match blueInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-blue button-inactive"
    disabled=""
    type="button"
  >
    Blue inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match blueLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-blue"
    type="button"
  >
    Blue large button
  </button>
</div>
`;

exports[`<Button /> Render must match blueSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-blue"
    type="button"
  >
    Blue small button
  </button>
</div>
`;

exports[`<Button /> Render must match danger() 1`] = `
<div>
  <button
    class="btn btn-danger"
    type="button"
  >
    Danger button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-danger"
    type="button"
  >
    <mock-file
      aria-hidden="true"
      classname="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
    Danger icon button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-danger"
    type="button"
  >
    Danger icon button
    <mock-file
      aria-hidden="true"
      classname="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
  </button>
</div>
`;

exports[`<Button /> Render must match dangerInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-danger button-inactive"
    disabled=""
    type="button"
  >
    Danger inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-danger"
    type="button"
  >
    Danger large button
  </button>
</div>
`;

exports[`<Button /> Render must match dangerSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-danger"
    type="button"
  >
    Danger small button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultIconLeftAligned() 1`] = `
<div>
  <button
    class="btn"
    type="button"
  >
    <mock-file
      aria-hidden="true"
      classname="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
    Default icon button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultIconRightAligned() 1`] = `
<div>
  <button
    class="btn"
    type="button"
  >
    Default icon button
    <mock-file
      aria-hidden="true"
      classname="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
  </button>
</div>
`;

exports[`<Button /> Render must match defaultInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn button-inactive"
    disabled=""
    type="button"
  >
    Default inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultLarge() 1`] = `
<div>
  <button
    class="btn btn-large"
    type="button"
  >
    Default large button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultLink() 1`] = `
<div>
  <a
    class="btn"
    href="#url"
    role="button"
  >
    Default link button
  </a>
</div>
`;

exports[`<Button /> Render must match defaultNormal() 1`] = `
<div>
  <button
    class="btn"
    type="button"
  >
    Default normal button
  </button>
</div>
`;

exports[`<Button /> Render must match defaultSmall() 1`] = `
<div>
  <button
    class="btn btn-sm"
    type="button"
  >
    Default small button
  </button>
</div>
`;

exports[`<Button /> Render must match orange() 1`] = `
<div>
  <button
    class="btn btn-orange"
    type="button"
  >
    Orange button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-orange"
    type="button"
  >
    <mock-file
      aria-hidden="true"
      classname="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
    Orange icon button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-orange"
    type="button"
  >
    Orange icon button
    <mock-file
      aria-hidden="true"
      classname="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
  </button>
</div>
`;

exports[`<Button /> Render must match orangeInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-orange button-inactive"
    disabled=""
    type="button"
  >
    Orange inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-orange"
    type="button"
  >
    Orange large button
  </button>
</div>
`;

exports[`<Button /> Render must match orangeSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-orange"
    type="button"
  >
    Orange small button
  </button>
</div>
`;

exports[`<Button /> Render must match outline() 1`] = `
<div>
  <button
    class="btn btn-outline"
    type="button"
  >
    Outline button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-outline"
    type="button"
  >
    <mock-file
      aria-hidden="true"
      classname="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
    Outline icon button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-outline"
    type="button"
  >
    Outline icon button
    <mock-file
      aria-hidden="true"
      classname="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
  </button>
</div>
`;

exports[`<Button /> Render must match outlineInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-outline button-inactive"
    disabled=""
    type="button"
  >
    Outline inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-outline"
    type="button"
  >
    Outline large button
  </button>
</div>
`;

exports[`<Button /> Render must match outlineSmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-outline"
    type="button"
  >
    Outline small button
  </button>
</div>
`;

exports[`<Button /> Render must match primary() 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Primary button
  </button>
</div>
`;

exports[`<Button /> Render must match primaryIconLeftAligned() 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    <mock-file
      aria-hidden="true"
      classname="mr-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
    Primary icon button
  </button>
</div>
`;

exports[`<Button /> Render must match primaryIconRightAligned() 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Primary icon button
    <mock-file
      aria-hidden="true"
      classname="ml-2"
      height="16"
      role="img"
      style="display: inline-block; fill: currentColor; user-select: none; vertical-align: text-bottom;"
      viewbox="0 0 16 16"
      width="16"
    />
  </button>
</div>
`;

exports[`<Button /> Render must match primaryInactive() 1`] = `
<div>
  <button
    aria-disabled="true"
    class="btn btn-primary button-inactive"
    disabled=""
    type="button"
  >
    Primary inactive button
  </button>
</div>
`;

exports[`<Button /> Render must match primaryLarge() 1`] = `
<div>
  <button
    class="btn btn-large btn-primary"
    type="button"
  >
    Primary large button
  </button>
</div>
`;

exports[`<Button /> Render must match primarySmall() 1`] = `
<div>
  <button
    class="btn btn-sm btn-primary"
    type="button"
  >
    Primary small button
  </button>
</div>
`;
